--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
     networks:
       dns_net:
         ipv4_address: 172.20.0.6
+    dns:
+    - 127.0.0.1
+    - 1.1.1.1
     ports:
     - "53:53/tcp"
     - "53:53/udp"
@@ -32,6 +35,9 @@ services:
   unbound:
     container_name: unbound
     image: mvance/unbound-rpi:latest
+    dns:
+    - 127.0.0.1
+    - 1.1.1.1
     networks:
       dns_net:
         ipv4_address: 172.20.0.7
