--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,21 @@
 version: '3'
- 
-networks:
-  dns_net:
-    driver: bridge
-    ipam:
-        config:
-        - subnet: 172.20.0.0/16
- 
+  
 services:
   pihole:
     container_name: pihole
-    hostname: pihole
     image: pihole/pihole:latest
-    networks:
-      dns_net:
-        ipv4_address: 172.20.0.6
-    dns:
-    - 127.0.0.1
-    - 1.1.1.1
     ports:
     - "53:53/tcp"
     - "53:53/udp"
     - "80:80/tcp"
-    - "443:443/tcp"
     environment:
     - 'TZ=America/Los_Angeles'
     - 'WEBPASSWORD=<insert password>'
-    - 'DNS1=172.20.0.7#5053'
+    - 'DNS1=8.8.8.8'
     - 'DNS2=no'
     volumes:
-    - './pihole/etc-pihole/:/etc/pihole/'
-    - './pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/'
-    restart: unless-stopped
-  unbound:
-    container_name: unbound
-    image: mvance/unbound-rpi:latest
-    dns:
-    - 127.0.0.1
-    - 1.1.1.1
-    networks:
-      dns_net:
-        ipv4_address: 172.20.0.7
-    volumes:
-    - ./unbound:/opt/unbound/etc/unbound
-    ports:
-    - "5053:5053/tcp"
-    - "5053:5053/udp"
-    healthcheck:
-      disable: true
+    - './etc-pihole:/etc/pihole'
+    - './etc-dnsmasq.d:/etc/dnsmasq.d'
+    cap_add:
+      - NET_ADMIN
     restart: unless-stopped
